syntax = "proto3";

option csharp_namespace = "OrderAPI";

package OrderProto;

import "google/protobuf/wrappers.proto";

service OrderProto {
	rpc Add_Order (Order) returns (Empty_Response);
	rpc Get_Order (Order_Id) returns (Order);
}

message Order{
	google.protobuf.Int32Value id = 1;
	int32 product_id = 2;
	int32 product_amount=3;
}


message Order_Id{
	int32 product_id = 1;
}

message Empty_Response{ }

